# PCO-AI-Classification-of-Legislation

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  app.py  claude.md  fly.toml  gpt.md  justfile  model.py  pyproject.toml  result.py  style.css
.github/workflows/: mirror-to-gitlab.yml
deploy/: README.md  fly-rsync-helper  rsync-data
