[project]
name = "pco-ui"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "kuzu>=0.9.0",
  "lancedb>=0.22.0",
  "logfire>=3.16.0",
  "markdown>=3.8",
  "pydantic>=2.11.4",
  "pydantic-ai>=0.1.9",
  "pydantic-settings>=2.9.1",
  "rich>=14.0.0",
  "streamlit>=1.45.0",
  "streamlit-authenticator>=0.4.2",
  "structlog>=25.3.0",
  "wadler-lindig>=0.1.5",
  "watchdog>=6.0.0",
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "C4", "SIM", "PL", "FURB", "RUF", "I"]
